0.50: Mon Aug  4 07:30:41 EDT 2008
   - added vector tags and the ability to add "computers" linked
     to other vectors

0.50: Sun Aug  3 16:15:52 EDT 2008
   - I started the new smarter linking
   - fixed an unimportant memory leak with Scalar::Util::weaken()

0.50: Sun Aug  3 07:44:31 EDT 2008
   - I modernized and updated the crap out of the vector class
   - I tested most of that new stuff also
   - I added the "computer" storage devices to the Vector class

0.50: Fri Aug  1 07:16:51 EDT 2008
   - bringing this distro up to date, apparently people actually
     use it.
   - tons of doc fixes
   - adding an overloader class to deal with "" and 0+
   - pre-reqed in Number::Format for ""
   - forget returning undef cardinality, vector sizes are 0 when
     they don't have a size set.

0.42:  Wed Jan 25 17:22:11 EST 2006
   - jettero patched in Orien's things

0.41.3:  Thu Mar 25 12:48:56 EST 2004
   - jettero took out the stoopid mod::sig, everyone hated
     it anyway

0.41.1 and 0.41.2: Tue Mar 23 07:59:46 EST 2004
   - Copyright clarifications.  ... GPL with a twist.

0.41:  Fri Jan 30 08:54:37 EST 2004
   - jettero found an amazingly STUPID typo in the Basic.pm
     Statisics anyone?

0.4:  Thu Jan 29 11:20:51 EST 2004
   - jettero added the UNBIAS flag for those that wish to
     use (N-1) in their variance. Perhaps I should switch
     the default. We will see.

0.39:  Fri Dec 12 07:18:18 EST 2003
   - jettero changed the NAME field to match CPAN

0.38:  Tue Dec  9 08:35:59 EST 2003
   - jettero discovered many bugs in the insert/ginsert of
     the new new()s

0.37:  Mon Dec  8 20:58:08 EST 2003
   - jettero cleaned up the new() functions so they don't
     require arguments for no reason

0.36:  Sat Dec  6 11:32:17 EST 2003
   - jettero added (linear) LeastSquareFit

0.35:  Tue Dec  2 17:04:58 EST 2003
   - jettero was working on the documentation in Basic.pm
     when he realized the need for ginsert and set_vector