@@ -5,6 +5,6 @@ Basic/Mode.pm            [x]        [x]      [x]         [x]          [x]       
 Basic/Variance.pm        [x]        [x]      [x]         [x]          [x]          [x]   [x]       [x]
 Basic/StdDev.pm          [x]        [x]      [x]         [x]          [x]          [x]   [x]       [x]
 Basic/Vector.pm          [ ]        [x]      [x]         [x]          [x]          [x]   [x]       [-]
-Basic/CoVariance.pm      [ ]        [ ]      [ ]         [ ]          [ ]          [ ]   [ ]       [ ]
+Basic/Covariance.pm      [ ]        [ ]      [ ]         [ ]          [ ]          [ ]   [ ]       [ ]
 Basic/Correlation.pm     [ ]        [ ]      [ ]         [ ]          [ ]          [ ]   [ ]       [ ]
 Basic/LeastSquareFit.pm  [ ]        [ ]      [ ]         [ ]          [ ]          [ ]   [ ]       [ ]
